Bug 378241 - Layer rendered with offset when using liquify tool and zoom
Summary: Layer rendered with offset when using liquify tool and zoom
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: 3.1.2
Platform: Appimage Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-29 13:59 UTC by Dmitrii Utkin
Modified: 2017-04-06 10:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screencast to reproduce the problem (1.64 MB, video/mp4)
2017-03-29 13:59 UTC, Dmitrii Utkin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitrii Utkin 2017-03-29 13:59:24 UTC
Created attachment 104796 [details]
screencast to reproduce the problem

This occurs when using Liquify tool on large canvas with large enough layer. If you start transformation tool and zoom in, the currently transforming layer may display with offset.

Please see screencast for details. I created 2 layers with different colors to make it clear how current layer jumps.
Comment 1 Dmitry Kazakov 2017-03-29 15:17:10 UTC
I think it is related to the bug "canvas becomes black when zoomed in". The one with black canvas I can surely reproduce.
Comment 2 Dmitry Kazakov 2017-03-29 16:18:00 UTC
Git commit 4cd98c31351b5c892750447e9ca160101b39f630 by Dmitry Kazakov.
Committed on 29/03/2017 at 16:17.
Pushed by dkazakov into branch 'kazakov/svg-loading'.

Fix canvas blackout on high zoomins in Liquify tool

M  +1    -1    plugins/tools/tool_transform2/kis_liquify_transform_strategy.cpp

https://commits.kde.org/krita/4cd98c31351b5c892750447e9ca160101b39f630
Comment 3 Halla Rempt 2017-04-06 10:03:24 UTC
Git commit 3ae2d550a1b87094d37630646e2d5f45015ef864 by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 06/04/2017 at 10:02.
Pushed by rempt into branch 'krita/3.1'.

Fix canvas blackout on high zoomins in Liquify tool

M  +1    -1    plugins/tools/tool_transform2/kis_liquify_transform_strategy.cpp

https://commits.kde.org/krita/3ae2d550a1b87094d37630646e2d5f45015ef864