Fix canvas blackout on high zoomins in Liquify tool

BUG:378241